tests/fixtures/invalid/pow_float_set_list.py
# Cannot call pow() with Float, Set[int], List[int]
x = pow(1.0, {1, 2, 3}, [1, 2, 3])
